@@ -372,6 +372,7 @@ label:hover:before {
 
 .side-bar__element {
   background: @side-bar-element-bg-color;
+  padding-left: 25px;
 }
 
 .side-bar__element:hover {
