@@ -59,3 +59,34 @@
     position: absolute;
     cursor:pointer;
 }
+
+.table__tab__tab-header{
+  font-weight: 700;
+}
+
+.table__tab__tab-header--selected{
+  background-color: @side-bar-element-active-bg-color;
+}
+
+.collapse_btn--active{
+  color: @side-bar-element-active-bg-color;
+}
+
+.table__list__btn__wrapper{
+  cursor: pointer;
+  min-height: 40px;
+  display: flex;
+  flex-direction: row;
+  border-bottom: @side-bar-bottom-border;
+}
+
+.table__list__btn{
+  flex-grow:1;
+  text-align: center;
+  padding: 10px;
+  border-left: @side-bar-bottom-border;
+}
+
+.table__list__btn__icon{
+  margin-right: 5px;
+}
